// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIAutocompleterInput /> should hide the placeholder when a value is passed 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper"
  data-automationid={undefined}
>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input xui-input-has-right-icon"
    data-automationid={undefined}
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder="test-placeholder"
    readOnly={false}
    type="search"
    value="hello"
  />
  <span
    className="xui-autocompleter--placeholder xui-autocompleter--placeholder-hidden"
  >
    test-placeholder
  </span>
</div>
`;

exports[`<XUIAutocompleterInput /> should include the default layout classes by default 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper"
  data-automationid={undefined}
>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input xui-input-has-right-icon"
    data-automationid={undefined}
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder={undefined}
    readOnly={false}
    type="search"
    value=""
  />
  <span
    className="xui-autocompleter--placeholder"
  />
</div>
`;

exports[`<XUIAutocompleterInput /> should include the default layout classes when defaultStyling is true 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper"
  data-automationid={undefined}
>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input xui-input-has-right-icon"
    data-automationid={undefined}
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder={undefined}
    readOnly={false}
    type="search"
    value=""
  />
  <span
    className="xui-autocompleter--placeholder"
  />
</div>
`;

exports[`<XUIAutocompleterInput /> should render an automationid when passed a qaHook 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper"
  data-automationid="test-qaHook--container"
>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input xui-input-has-right-icon"
    data-automationid="test-qaHook"
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder={undefined}
    readOnly={false}
    type="search"
    value=""
  />
  <span
    className="xui-autocompleter--placeholder"
  />
</div>
`;

exports[`<XUIAutocompleterInput /> should render an id on the root node when passed a value in id 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper"
  data-automationid={undefined}
>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input xui-input-has-right-icon"
    data-automationid={undefined}
    disabled={false}
    id="test-id"
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder={undefined}
    readOnly={false}
    type="search"
    value=""
  />
  <span
    className="xui-autocompleter--placeholder"
  />
</div>
`;

exports[`<XUIAutocompleterInput /> should render extra classes on the container when passed a value in containerClassNames 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper test-containerClass"
  data-automationid={undefined}
>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input xui-input-has-right-icon"
    data-automationid={undefined}
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder={undefined}
    readOnly={false}
    type="search"
    value=""
  />
  <span
    className="xui-autocompleter--placeholder"
  />
</div>
`;

exports[`<XUIAutocompleterInput /> should render extra classes when passed a value in className 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper"
  data-automationid={undefined}
>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input test-class xui-input-has-right-icon"
    data-automationid={undefined}
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder={undefined}
    readOnly={false}
    type="search"
    value=""
  />
  <span
    className="xui-autocompleter--placeholder"
  />
</div>
`;

exports[`<XUIAutocompleterInput /> should render the placeholder inside a custom span 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper"
  data-automationid={undefined}
>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input xui-input-has-right-icon"
    data-automationid={undefined}
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder="test-placeholder"
    readOnly={false}
    type="search"
    value=""
  />
  <span
    className="xui-autocompleter--placeholder"
  >
    test-placeholder
  </span>
</div>
`;

exports[`<XUIAutocompleterInput /> should spread ariaAttributes on the input element 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper"
  data-automationid={undefined}
>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input xui-input-has-right-icon"
    data-automationid={undefined}
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder={undefined}
    readOnly={false}
    role="searchbox"
    type="search"
    value=""
  />
  <span
    className="xui-autocompleter--placeholder"
  />
</div>
`;

exports[`<XUIAutocompleterInput /> should spread iconAttributes on the icon element 1`] = `
<div
  className="xui-inputwrapper xui-autocompleter--inputwrapper"
  data-automationid={undefined}
>
  <div
    className="xui-input--iconwrapper xui-input--iconwrapper-left"
  >
    <svg
      className="xui-icon xui-input--icon-left"
      data-automationid={undefined}
      focusable="false"
      style={null}
      viewBox="0 0 30 30"
    >
      <path
        d="M18.8929126,17.4786991 C19.5903306,16.4982449 20,15.2980382 20,14 C20,10.68 17.32,8 14,8 C10.68,8 8,10.68 8,14 C8,17.32 10.68,20 14,20 C15.2980382,20 16.4982449,19.5903306 17.4786991,18.8929126 L21.4142136,22.8284271 L22.8284271,21.4142136 L18.8929126,17.4786991 Z M14,18.5 C11.51,18.5 9.5,16.49 9.5,14 C9.5,11.51 11.51,9.5 14,9.5 C16.49,9.5 18.5,11.51 18.5,14 C18.5,16.49 16.49,18.5 14,18.5 Z"
        role="presentation"
        transform={undefined}
      />
    </svg>
  </div>
  <input
    className="xui-input xui-input-borderless xui-autocompleter--input xui-input-has-left-icon"
    data-automationid={undefined}
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder={undefined}
    readOnly={false}
    type="search"
    value=""
  />
</div>
`;

exports[`<XUIAutocompleterInput /> shouldn't include the default layout classes when defaultStyling is false 1`] = `
<div
  className="xui-inputwrapper"
  data-automationid={undefined}
>
  <input
    className="xui-input xui-input-has-right-icon"
    data-automationid={undefined}
    disabled={false}
    id={undefined}
    maxLength={undefined}
    onChange={[Function]}
    onFocus={undefined}
    onKeyDown={undefined}
    onKeyPress={undefined}
    onKeyUp={[Function]}
    placeholder={undefined}
    readOnly={false}
    type="search"
    value=""
  />
  <span
    className="xui-autocompleter--placeholder"
  />
</div>
`;
